# backend/src/main/java/at/idling/idli/MetricDto.java
@@ -1,0 +1,4 @@
+package at.idling.idli;
+
+public record MetricDto(long id, String name, String canonicalUnit) {
+}
