# backend/src/main/java/at/idling/idli/TotalDto.java
@@ -1,0 +1,4 @@
+package at.idling.idli;
+
+public record TotalDto(long metricId, String metricName, String canonicalUnit, long total) {
+}
